--- a/package.json
+++ b/package.json
@@ -1,40 +1,72 @@
 {
   "name": "elenpi",
   "version": "0.3.2",
-  "description": "Small Lexer/Parser tool.",
-  "main": "index.js",
-  "module": "index.es6.js",
-  "directories": {
-    "test": "test"
-  },
+  "description": "Small DSL for LL(k) parser",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "jsnext:main": "dist/index.mjs",
+
   "scripts": {
-    "test": "mocha"
+    "prebuild": "eslint src test",
+    "build": "npm run es5-build && npm run bundles-build && uglifyjs dist/bundles/index.js -m -o dist/bundles/index.min.js",
+    "es5-build": "babel src -d dist/es5",
+    "es5-watch": "babel src -d dist/es5 -w",
+    "bundles-build": "rollup -c",
+    "bundles-watch": "rollup -c -w",
+    "pretest": "npm run build",
+    "test": "mocha",
+    "karma": "karma start",
+    "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha test/*.js",
+    "prepublish": "npm test"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/nomocas/elenpi.git"
   },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
+  },
+
   "keywords": [
     "lexer",
-    "parser"
+    "parser",
+    "dsl",
+    "llk"
   ],
-  "author": "Gilles Coomans <gilles.coomans@gmail.com>",
-  "license": "MIT",
+
+  "homepage": "https://github.com/nomocas/elenpi",
   "bugs": {
     "url": "https://github.com/nomocas/elenpi/issues"
   },
-  "homepage": "https://github.com/nomocas/elenpi",
+  "author": "Gilles Coomans",
+  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
+    "assert": "^1.4.1",
+    "babel-cli": "^6.14.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-unassert": "^2.1.2",
-    "babel-preset-es2015": "^6.22.0",
-    "chai": "^2.2.0",
-    "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-jshint": "^1.10.0",
-    "gulp-live-server": "0.0.14",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglifyjs": "^0.6.1",
-    "jshint-stylish": "^1.0.1"
+    "babel-plugin-istanbul": "^2.0.2",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "babelrc-rollup": "^3.0.0",
+    "chai": "^3.5.0",
+    "cross-env": "^2.0.1",
+    "eslint": "^3.15.0",
+    "eslint-plugin-import": "^2.2.0",
+    "karma": "^1.4.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-rollup-preprocessor": "^3.0.3",
+    "mocha": "^3.0.2",
+    "nyc": "^8.1.0",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-watch": "^3.2.2",
+    "uglify-js": "^2.7.5"
   }
 }
