--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "elenpi",
   "version": "0.3.2",
-  "description": "Small DSL for LL(k) parser",
+  "description": "Small DSL for LL(1) parser",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "jsnext:main": "dist/index.mjs",
 
   "scripts": {
     "prebuild": "eslint src test",
-    "build": "npm run es5-build && npm run bundles-build && uglifyjs dist/bundles/index.js -m -o dist/bundles/index.min.js",
-    "es5-build": "babel src -d dist/es5",
-    "es5-watch": "babel src -d dist/es5 -w",
+    "build": "npm run bundles-build && uglifyjs dist/index.js -m -o dist/index.min.js",
     "bundles-build": "rollup -c",
     "bundles-watch": "rollup -c -w",
     "pretest": "npm run build",
