--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "jsnext:main": "dist/index.mjs",
-
   "scripts": {
     "prebuild": "eslint src test",
     "build": "npm run bundles-build && uglifyjs dist/index.js -m -o dist/index.min.js",
@@ -15,6 +14,7 @@
     "test": "mocha",
     "karma": "karma start",
     "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha test/*.js",
+    "analyse": "./node_modules/.bin/es6-plato -r -d plato src",
     "prepublish": "npm test"
   },
   "repository": {
@@ -28,14 +28,12 @@
     "sourceMap": false,
     "instrument": false
   },
-
   "keywords": [
     "lexer",
     "parser",
     "dsl",
     "ll1"
   ],
-
   "homepage": "https://github.com/nomocas/elenpi",
   "bugs": {
     "url": "https://github.com/nomocas/elenpi/issues"
@@ -53,6 +51,7 @@
     "babelrc-rollup": "^3.0.0",
     "chai": "^3.5.0",
     "cross-env": "^2.0.1",
+    "es6-plato": "^1.0.14",
     "eslint": "^3.15.0",
     "eslint-plugin-import": "^2.2.0",
     "karma": "^1.4.1",
