--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "mocha",
     "karma": "karma start",
     "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha test/*.js",
-    "analyse": "./node_modules/.bin/es6-plato -r -d plato src",
+    "coveralls": "cross-env NODE_ENV=test nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "analyse": "es6-plato -r -d plato src",
     "prepublish": "npm test"
   },
   "repository": {
@@ -22,6 +23,10 @@
     "url": "https://github.com/nomocas/elenpi.git"
   },
   "nyc": {
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
     "require": [
       "babel-register"
     ],
@@ -50,6 +55,7 @@
     "babel-register": "^6.14.0",
     "babelrc-rollup": "^3.0.0",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.16",
     "cross-env": "^2.0.1",
     "es6-plato": "^1.0.14",
     "eslint": "^3.15.0",
@@ -60,6 +66,7 @@
     "karma-mocha": "^1.3.0",
     "karma-rollup-preprocessor": "^3.0.3",
     "mocha": "^3.0.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^8.1.0",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
