--- a/package.json
+++ b/package.json
@@ -48,15 +48,16 @@
   "dependencies": {},
   "devDependencies": {
     "assert": "^1.4.1",
+    "auto-changelog": "*",
     "babel-cli": "^6.14.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-istanbul": "^2.0.2",
+    "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-register": "^6.14.0",
     "babelrc-rollup": "^3.0.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.16",
-    "cross-env": "^2.0.1",
+    "cross-env": "^4.0.0",
     "es6-plato": "^1.0.14",
     "eslint": "^3.15.0",
     "eslint-plugin-import": "^2.2.0",
@@ -64,11 +65,11 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-rollup-preprocessor": "^3.0.3",
-    "mocha": "^3.0.2",
+    "karma-rollup-preprocessor": "^4.0.0",
+    "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^8.1.0",
-    "rollup": "^0.41.4",
+    "nyc": "^10.2.0",
+    "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-watch": "^3.2.2",
     "uglify-js": "^2.7.5"
