--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "jsnext:main": "dist/index.mjs",
   "scripts": {
     "prebuild": "eslint src test",
-    "build": "npm run bundles-build && uglifyjs dist/index.js -m -o dist/index.min.js",
+    "build": "npm run es5-build && npm run bundles-build && uglifyjs dist/index.js -m -o dist/index.min.js",
+    "es5-build": "babel src -d dist/es5",
+    "es5-watch": "babel src -d dist/es5 -w",
     "bundles-build": "rollup -c",
     "bundles-watch": "rollup -c -w",
     "pretest": "npm run build",
