--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elenpi",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "Small DSL for LL(1) parser",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -19,7 +19,12 @@
     "coveralls": "npm run cover && cat ./coverage/lcov.info | coveralls",
     "analyse": "es6-plato -r -d plato src",
     "version": "auto-changelog --package; git add CHANGELOG.md",
-    "prepublish": "npm test && npm run version"
+    "commitmsg": "validate-commit-msg",
+    "release": "standard-version",
+    "prerelease": "npm test",
+    "prepublish": "npm test",
+    "precommit": "npm run prebuild",
+    "prepush": "npm test"
   },
   "repository": {
     "type": "git",
@@ -51,7 +56,6 @@
   "dependencies": {},
   "devDependencies": {
     "assert": "^1.4.1",
-    "auto-changelog": "*",
     "babel-cli": "^6.14.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^4.1.1",
@@ -65,6 +69,7 @@
     "es6-plato": "^1.0.14",
     "eslint": "^3.15.0",
     "eslint-plugin-import": "^2.2.0",
+    "husky": "^0.14.3",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -76,6 +81,8 @@
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-watch": "^3.2.2",
-    "uglify-js": "^2.7.5"
+    "standard-version": "^4.2.0",
+    "uglify-js": "^2.7.5",
+    "validate-commit-msg": "^2.14.0"
   }
 }
